# algae_detection

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  algae_gui.py  config.gpu.yaml  config.local.yaml  config.yaml  fused_inf.py  predict.py  pyproject.toml  rcnn_training.py  requirements-gpu.txt  requirements.txt  run.py  run_debug.bat  setup_runpod.sh  start.sh  trainer.py  training.ipynb  training_6ch.ipynb
Yolo/: data.yaml  model.ipynb  train.txt
Yolo/combined_dataset/: custom_dataset.py  custom_trainer.py  data.yaml  model.ipynb  obj.data  obj.names
Yolo/data_rcnn/: rcnn_training.py
Yolo/data_rcnn/labels/: Image_11396_og.txt  Image_11400_og.txt  Image_11414_og.txt  Image_11419_og.txt  (+185 more)
algae/: __init__.py  cache.py  config.py  data.py  eval.py  infer.py  metrics.py  modeling.py  train.py  utils.py
app/: algae_detect_app.py  algae_detect_app.pyw  build_exe_minimal.bat
data/: annotated.txt
scripts/: oragnize_annotations.py  smoke_test.py  train.py
src/algae/: __init__.py  classify.py  cli.py  cluster.py  config.py  detect.py  embed.py  manifest.py  review.py  visualize.py
számolás/: APP2024_Balaton.xlsx  APP_2025_Balaton.xlsx
tools/: convert_ckpt_to_state_dict.py  counting_hook.py  filters.py  hist.py  infer.py  models.py  oragnize_annotations.py  summarize_sizes.py  utils.py  xml_converter.py
tools/gt_area_hist_out/: area_stats.json
util/: organizer.ipynb  train.py
utils/: annotator.py  custom_dataset.py  inference.py  label_fixing.py  labeling.py  merging.py  oragnize.py  organizer.ipynb  organizer.py  vis.py
(+279 files in other folders)
